# tcp-chat

./: .envrc  .gitignore  .gitlab-ci.yml  .typos.toml  Cargo.toml  Dockerfile  Justfile  LICENSE  LINK.md  README.md  build.rs  committed.toml  diesel.toml  docker-compose.yml  flake.nix  justfile
.github/workflows/: issue-auto-assign.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs  options.rs
client/: go.mod  go.sum
client/proto/: chat.pb.go  chat_grpc.pb.go  entities.pb.go  events.pb.go  requests.pb.go  service.pb.go  service_grpc.pb.go
client/src/: main.go
client/src/client/: client.go
client/src/common/: register.go  send_message.go
client/src/create_room/: create_room.go
client/src/form/: form.go  form.html
client/src/handle_front/: handle_front.go
client/src/login/: login.go
client/src/register/: register.go
client/src/send_message/: send_message.go
client/src/server/: server.go
client/src/subscribe_room/: subscribe_room.go
frontend/css/: auth.css  create_room.css  index.css
frontend/scripts/: auth.js  create_room.js  index.js
frontend/templates/: auth.html  create_room.html  index.html  signin.html
llm/: Dockerfile  req.json
migrations/2024-05-15-232111_create_users/: up.sql
migrations/2024-05-15-235726_create_rooms/: down.sql  up.sql
migrations/2024-05-16-000754_create_messages/: up.sql
migrations/2024-05-16-004428_create_rooms_users/: down.sql  up.sql
proto/: chat.proto  entities.proto  events.proto  requests.proto  room_manager.proto  service.proto
server/: Cargo.toml  Dockerfile  build.rs
server/src/: auth.rs  chat.rs  lib.rs  main.rs  registry.rs  token.rs  uuid.rs
server/src/channel/: mod.rs
server/src/entities/: message.rs  mod.rs  relations.rs  room.rs  schema.rs  token.rs  user.rs  uuid.rs
server/src/persistence/: mod.rs
server/src/room_manager/: mod.rs
server/src/services/: auth_tester.rs  chat.rs  mod.rs  registry.rs
server/tests/: auth.rs  common.rs  pool.rs  registry.rs  room_manager.rs  server_events.rs
shells/default/: default.nix
sqlrunner/: Dockerfile
src/: main.rs
tls/: README.md
