[package]
name = "tcp-chat"
version = "0.1.0"
edition = "2021"
authors = ["mxxntype <59417007+mxxntype@users.noreply.github.com>"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = { level = "deny", priority = 1 }
pedantic = "deny"
nursery = "deny"
complexity = "deny"
perf = "deny"

[dependencies]
actix-web = "4.5.1"
color-eyre = "0.6.3"
