[workspace]
resolver = "2"
members = ["cli", "server"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "deny"
nursery = "deny"
complexity = "deny"
perf = "deny"
enum_glob_use = { level = "deny", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
or_fun_call = { level = "allow", priority = 1 }
