[package]
name = "tcp-chat-cli"
version = "0.1.0"
edition = "2021"
authors = ["mxxntype <59417007+mxxntype@users.noreply.github.com>"]

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
tcp-chat = { path = "../server" }
color-eyre = "0.6.3"
prost = "0.12.4"
prost-types = "0.12.4"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tonic = { version = "0.11.0", features = ["tls"] }
uuid = { version = "1.8.0", features = ["v4"] }
promkit = "0.4.3"
crossterm = "0.27.0"

[build-dependencies]
tonic-build = "0.11"

# `cargo-machete` reports this as unused, but it's absolutely used by `tonic` :)
[package.metadata.cargo-machete]
ignored = ["prost", "prost-types"]
