[package]
name = "tcp-chat"
version = "0.1.0"
edition = "2021"
authors = ["mxxntype <59417007+mxxntype@users.noreply.github.com>"]

[dependencies]
color-eyre = "0.6.3"
const_format = "0.2.32"
futures = "0.3.30"
prost = "0.12.4"
prost-types = "0.12.4"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.11"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
complexity = "deny"
perf = "deny"
enum_glob_use = { level = "deny", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
or_fun_call = { level = "allow", priority = 1 }

# `cargo-machete` reports this as unused, but it's absolutely used by `tonic` :)
[package.metadata.cargo-machete]
ignored = ["prost"]
