[package]
name = "tcp-chat"
version = "0.1.0"
edition = "2021"
authors = ["mxxntype <59417007+mxxntype@users.noreply.github.com>"]

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
color-eyre = "0.6.3"
diesel = { version = "2.1.6", features = ["postgres", "uuid", "r2d2"] }
prost = "0.12.6"
prost-types = "0.12.4"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
redis = { version = "0.25.3", features = ["uuid", "tokio-comp", "aio"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.11"

# `cargo-machete` reports this as unused, but it's absolutely used by `tonic` :)
[package.metadata.cargo-machete]
ignored = ["prost", "prost-types"]
