[package]
name = "tcp-chat"
version = "0.1.0"
edition = "2021"
authors = ["mxxntype <59417007+mxxntype@users.noreply.github.com>"]

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
blake3 = "1.5.1"
color-eyre = "0.6.3"
diesel = { version = "2.1.6", features = ["postgres", "uuid", "r2d2"] }
futures = "0.3.30"
hex = { version = "0.4.3", optional = true }
itertools = "0.13.0"
ollama-rs = "0.1.9"
prost = "0.12.6"
prost-types = "0.12.4"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
redis = { version = "0.25.3", features = ["uuid", "tokio-comp", "aio"] }
streebog = { version = "0.10.2", optional = true } # GOST 34.11-2012 Hash function (Codename "Streebog")
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.11"
tonic = { version = "0.11.0", features = ["tls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.11"

[features]
default = ["streebog"]
streebog = ["dep:streebog", "dep:hex"]

# `cargo-machete` reports this as unused, but it's absolutely used by `tonic` :)
[package.metadata.cargo-machete]
ignored = ["prost", "prost-types"]
